Prevent the response textarea getting too big #118147

--- a/styles.css
+++ b/styles.css
@@ -3,15 +3,17 @@
     width: auto;
     display: inline;
 }
-.que.pmatch .answer input {
-    width: 99%;
+.que.pmatch .qtext textarea,
+.que.pmatch .ablock textarea {
+    max-width: 100%;
 }
+
+/* Editing form. Style repeated elements*/
 #page-question-type-pmatch .mform .textareamonospace {
     white-space: pre;
     font-family: Andale Mono, Monaco, Courier New, DejaVu Sans Mono, monospace;
 }
 
-/* Editing form. Style repeated elements*/
 /* Top */
 body#page-question-type-pmatch div[id^=fitem_id_][id*=answer_],
 body#page-question-type-pmatch #fitem_id_addanswers + .fitem {
@@ -28,6 +30,7 @@ body#page-question-type-pmatch div[id^=fitem_id_][id*=_answer_] .fitemtitle,
 body#page-question-type-pmatch #fitem_id_addanswers + .fitem .fitemtitle {
     font-weight: bold;
 }
+
 /* Middle */
 body#page-question-type-pmatch div[id^=fitem_id_][id*=fraction_],
 body#page-question-type-pmatch #fitem_id_addanswers + .fitem + .fitem {
@@ -40,6 +43,7 @@ body#page-question-type-pmatch #fitem_id_addanswers + .fitem + .fitem {
     border-top: 0;
     border-bottom: 0;
 }
+
 /* Bottom */
 body#page-question-type-pmatch div[id^=fitem_id_][id*=feedback_],
 body#page-question-type-pmatch div[id^=fitem_id_][id*=otherfeedback] {
@@ -58,6 +62,7 @@ body#page-question-type-pmatch #fitem_id_answer_0 {
     margin-top: 1em;
 }
 
+/* Styles for the question-testing interface. */
 .qtype_pmatch-selftest-missed-negative {
     font-weight: bold;
     color: #f00;
